coloquei para que todas rotas sejam acessadas apenas com token
